[package]
name = "scale-connector"
version = "0.1.3"
authors = ["Christian Spaniol <christian.spaniol@cpro-iot.com>"]
edition = "2018"


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "2.33.3" }
env_logger = { version = "*" }
log = { version = "0.4.14" }
paho-mqtt = { version = "*", default-features = false, features = ['bundled'] }
serde_json = { version = "1.0" }
serde = { version = "*", features = ["derive"]}
futures = {version = "*" }
#[profile.release]
#rustflags = ["-C", "target-feature=+crt-static"]
#telnet = { version = "*"}
#byteorder = {version = "*" }
#humanize = { version = "*"}
#ctrlc = { version = "*", features = ["termination"] }